# dml.fx

./: .gitignore  1  1.pub  README.md  UPGRADE_TO_V3.md  package-lock.json  package.json  release.sh  tsconfig.json
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/app/: layout.tsx  page.tsx
src/app/reset-password/: page.tsx
src/components/: AccountSettings.tsx  AdminPanel.tsx  AuthScreen.tsx  FXJournal.tsx
src/lib/: supabase.ts  version.ts
supabase/: migration_v201.sql  migration_v202.sql  migration_v203.sql  schema.sql
supabase/functions/ai-insights/: index.ts
supabase/functions/delete-user/: index.ts
supabase/functions/forecast/: index.ts
supabase/functions/import-csv/: index.ts
