[package]
name = "fx-journal"
version = "1.0.0"
description = "FX Trading Journal"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = ["shell-open"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
